Added more code

--- a/sql/views/index.ejs
+++ b/sql/views/index.ejs
@@ -1,5 +1,5 @@
-<form method="POST" action="/add_person">
-    <input name="SIN" type="text">
-    <input name="name" type="text">
+<form method="POST" action="/add_person" >
+    <input name="SIN" type="text" placeholder="SIN">
+    <input name="name" type="text" placeholder="name">
     <button type="submit">Add Person</button>
 </form>
